[package]
name = "merkle-root"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
test-case = "3.3.1"
